# ps-poetry

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  setup.ps1  workspace.code-workspace
documentation/: design.md  (+2 more)
libraries/version/: README.md  pyproject.toml
libraries/version/src/ps/version/: _version.py  _version_constraint.py  _version_metadata.py
libraries/version/src/ps/version/parsers/: __init__.py  _base_parser.py  _calver_parser.py  _loose_parser.py  _nuget_parser.py  _pep440_parser.py  _semver_parser.py
libraries/version/tests/: test_version.py
libraries/version/tests/parsers/: test_semver_parser.py
modules/check/: README.md  pyproject.toml
modules/check/src/ps/plugin/module/check/: __init__.py
modules/check/tests/: test_check_module.py
modules/delivery/: README.md  __init__.py  pyproject.toml
modules/delivery/src/ps/plugin/module/delivery/: _delivery_module.py
modules/delivery/tests/: conftest.py  test_delivery_command.py  test_env_resolver.py  test_formatted_renderer.py  test_json_renderer.py  test_logging.py  test_metadata_date.py  test_metadata_env.py  test_metadata_env_ver.py  test_metadata_integration.py  test_metadata_spec.py  test_rand_resolver.py
src/: .coveragerc  .markdownlint.json  .pep8  AGENTS.md  AGENTS_DOCS.md  AGENTS_LINTING.md  AGENTS_TESTS.md  README.md  conftest.py  launcher.ps1  launcher.py  pyproject.toml  pyrightconfig.json  pytest.ini  setup.ps1  test_toml_location.py  workspace.code-workspace
src/.agents/skills/documentation/: SKILL.md
src/.agents/skills/linting/: SKILL.md
src/.agents/skills/testing/: SKILL.md
src/documentation/: Building.md  Debugging.md  design.md  notes.md
src/examples/ps-dependency-injection/: basic_usage_example.py
src/examples/ps-di/: priority_example.py  satisfy_example.py  scope_example.py
src/examples/ps-plugin-module-delivery/: custom_resolver_example.py  object_resolver_example.py
src/examples/ps-plugin-sdk/: basic_usage_example.py  parse_dependencies_example.py
src/examples/ps-token-expressions/: basic_usage_example.py  custom_resolver_example.py
src/examples/ps-version/: basic_usage_example.py  version_constraint_example.py
src/experiments/: ps_module_in_host.py
src/libraries/di/: README.md  pyproject.toml
src/libraries/di/src/ps/di/: __init__.py  _di.py
src/libraries/di/tests/: conftest.py  test_context_manager.py  test_di.py  test_factory.py  test_register_resolve.py  test_satisfy.py  test_scope.py
src/libraries/token_expressions/: README.md  pyproject.toml
src/libraries/token_expressions/src/ps/token_expressions/: __init__.py  _expression_engine.py  _expression_factory.py  _validation.py  expression_factory.py  validation.py
src/libraries/token_expressions/src/ps/token_expressions/token_resolvers/: __init__.py  _base_resolver.py  _dict_resolver.py  _func_resolver.py  _instance_resolver.py  _none_resolver.py  base_resolver.py  dict_resolver.py  func_resolver.py  instance_resolver.py  list_resolver.py  none_resolver.py  resolver.py
src/libraries/token_expressions/tests/: test_expression_factory_default_callback.py  test_expression_factory_in_operator.py  test_expression_factory_match.py  test_expression_factory_materialize.py  test_expression_factory_recursive.py  test_expression_factory_validate.py  test_expression_factory_validate_match.py
src/libraries/token_expressions/tests/token_resolvers/: test_dict_resolver.py  test_instance_resolver.py  test_none_resolver.py  test_resolver.py
src/libraries/version/: README.md  pyproject.toml
src/libraries/version/src/ps/version/: __init__.py  _version.py  _version_prerelease.py  _version_standard.py  expression_factory.py  parser.py  version.py  version_functions.py  version_metadata.py  version_picker.py  version_prerelease.py  version_standard.py
src/libraries/version/tests/: test_dict_token_resolver.py  test_expression_factory_match.py  test_expression_factory_materialize.py  test_instance_token_resolver.py  test_parser.py  test_resolver.py  test_version.py  test_version_comparison.py  test_version_formatter.py  test_version_functions.py  test_version_metadata.py  test_version_picker.py  test_version_standard.py
src/libraries/version/tests/models/: test_parsed_version.py  test_version.py  test_version_metadata.py  test_version_prerelease.py  test_version_standard.py
src/libraries/version/tests/parsers/: test_calver_parser.py  test_loose_parser.py  test_nuget_parser.py  test_pep440_parser.py  test_semver_parser.py
src/modules/check/: README.md  pyproject.toml
src/modules/check/tests/: test_check_module.py  test_environment_check.py  test_imports_check.py  test_poetry_check.py  test_tool_check.py
src/modules/delivery/: README.md  pyproject.toml
src/modules/delivery/tests/: conftest.py  test_date_resolver.py  test_date_resolver_integration.py  test_delivery_command.py  test_formatted_renderer.py  test_git_resolver.py  test_metadata_date.py  test_metadata_deliver.py  test_metadata_env_ver.py  test_metadata_in.py  test_metadata_version.py  test_rand_resolver.py  test_version_resolver.py
src/modules/monorepo/: README.md  pyproject.toml
src/modules/monorepo/tests/: test_monorepo.py
src/plugin/: README.md  pyproject.toml
src/plugin/src/ps/plugin/core/: _di.py  _modules_handler.py  _plugin.py  di.py  logging.py  modules_handler.py  parse_toml.py  plugin.py  protocols.py  settings.py  toml.py
src/plugin/tests/: test_di.py  test_modules_handler.py  test_parse_dependencies_from_document.py  test_parse_name_from_document.py  test_parse_plugin_settings_from_document.py  test_parse_project.py  test_parse_version_from_document.py  test_plugin.py
src/sdk/: README.md  pyproject.toml
src/sdk/src/ps/plugin/sdk/: __init__.py
src/sdk/tests/: test_parse_dependencies_from_document.py  test_parse_name_from_document.py  test_parse_pep621_dependencies.py  test_parse_plugin_settings_from_document.py  test_parse_project.py  test_parse_sources_from_document.py  test_parse_version_from_document.py  test_project_utilities.py  test_toml_value.py
(+216 files in other folders)
