[project]
name = "ps-poetry"
description = "Modular Poetry plugin system with dependency injection, version management, and automated delivery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dynamic = ["dependencies", "version"]
authors = [
    { name = "ztBlackGad" },
]
keywords = ["poetry", "plugin", "monorepo", "dependency-injection", "versioning", "delivery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"
Issues     = "https://github.com/BlackGad/ps-poetry/issues"
Examples   = "https://github.com/BlackGad/ps-poetry-examples"

[tool.poetry]
packages = [
    { include = "src", from = "plugin" },
    { include = "experiments", from = "." },
]
version = "0.0.0"

[tool.poetry.dependencies]
poetry = "^2.3.1"
pydantic = "^2.12.5"

[project.entry-points."ps.module"]
entry_folder = "experiments.ps_module_in_host"
entry_class  = "experiments.ps_module_in_host:ModuleInHost"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
autopep8 = "^2.3.2"
pytest-asyncio = "^1.3.0"
pyright = "^1.1.408"

[tool.poetry.group.ps.dependencies]
ps-dependency-injection     = { path = "libraries/di", develop = true }
ps-version                  = { path = "libraries/version", develop = true }
ps-token-expressions        = { path = "libraries/token_expressions", develop = true }
ps-plugin-sdk               = { path = "sdk", develop = true }
ps-plugin-core              = { path = "plugin", develop = true }
ps-plugin-module-check      = { path = "modules/check", develop = true }
ps-plugin-module-delivery   = { path = "modules/delivery", develop = true }

[tool.poetry.requires-plugins]
ps-plugin-core  = {path = "plugin", develop = true }

[tool.ps-plugin]
modules = [
    "ModuleInHost",
    "ps-check",
    "ps-delivery",
]
# ps-check settings
checks = [
    "poetry", 
    "environment",
    "ruff", 
    "imports",
    # "pyright",
    "pytest"
]
# ps-delivery settings
version-patterns = [
    "[{in}] {in}",
    "[{git:mainline} and {git:dirty}] {git:version:major}.{git:version:minor<0>}.{git:distance}+{date:%Y%m%d%H%M}",
    "[{git:mainline}] {git:version:major}.{git:version:minor<0>}.{git:distance}",
    "[{git:dirty}] {git:version:major}.{git:version:minor<0>}.{git:distance}+{git:branch}.{date:%Y%m%d%H%M}",
    "{git:version:major}.{git:version:minor<0>}.{git:distance}+{git:branch}"
]
deliver = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "local"
url = "http://localhost:8420"
priority = "supplemental"

