[project]
name = "ps-poetry"
description = ""
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies", "version"]

[tool.poetry]
packages = [
    { include = "src", from = "plugin" },
    { include = "experiments", from = "." },
]
version = "0.0.0"

[tool.poetry.dependencies]
poetry = "^2.2.1"
toml = "^0.10.2"
pydantic = "^2.12.5"

[project.entry-points."ps.module"]
entry_folder = "experiments.ps_module_in_host"
entry_class  = "experiments.ps_module_in_host:ModuleInHost"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
autopep8 = "^2.3.2"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.ps.dependencies]
ps-plugin-sdk               = { path = "sdk", develop = true }
ps-plugin-core              = { path = "plugin", develop = true }
ps-plugin-module-check      = { path = "modules/check", develop = true }
ps-plugin-module-monorepo   = { path = "modules/monorepo", develop = true }

[tool.poetry.requires-plugins]
ps-plugin-core = {path = "plugin", develop = true }

[tool.ps-plugin]
enabled = true
monorepo = "host"
# include_checks = ["poetry"]
exclude_checks = ["poetry"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylance]
typeCheckingMode = "standard"