[project]
name = "ps-poetry"
description = ""
requires-python = ">=3.10,<3.14"
dynamic = ["dependencies", "version"]

[tool.poetry]
packages = [
    { include = "src", from = "plugin" },
    { include = "experiments", from = "." },
]
version = "0.0.0"

[tool.poetry.dependencies]
poetry = "^2.3.1"
toml = "^0.10.2"
pydantic = "^2.12.5"

[project.entry-points."ps.module"]
entry_folder = "experiments.ps_module_in_host"
entry_class  = "experiments.ps_module_in_host:ModuleInHost"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
autopep8 = "^2.3.2"
pytest-asyncio = "^1.3.0"


[tool.poetry.group.ps.dependencies]
ps-version                  = { path = "libraries/version", develop = true }
ps-token-expressions        = { path = "libraries/token_expressions", develop = true }
ps-plugin-sdk               = { path = "sdk", develop = true }
ps-plugin-core              = { path = "plugin", develop = true }
ps-plugin-module-check      = { path = "modules/check", develop = true }
ps-plugin-module-delivery   = { path = "modules/delivery", develop = true }
ps-plugin-module-monorepo   = { path = "modules/monorepo", develop = true }

[tool.poetry.requires-plugins]
ps-plugin-core = {path = "plugin", develop = true }
ps-plugin-sdk  = {path = "sdk", develop = true } # Needed to load SDK types in plugin project

[tool.ps-plugin]
checks-include = [
    "poetry", 
    "ruff", 
    "pytest"
]
# checks-exclude = ["poetry"]
modules-include = [
    "ModuleInHost",
    "ps-check",
    "ps-delivery",
    "ps-monorepo"
]
package-manager = "central"
version-pattern = "{major}.{minor}.{patch}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylance]
typeCheckingMode = "standard"