[project]
name        = "ps-version"
description = "Parse, compare, and format version numbers across PEP 440, SemVer, NuGet, CalVer, and loose formats"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]
keywords = ["version", "parsing", "semver", "pep440", "calver", "nuget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"
Issues     = "https://github.com/BlackGad/ps-poetry/issues"
Examples   = "https://github.com/BlackGad/ps-poetry-examples"

[tool.poetry]
packages = [ { include = "ps/version", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"