[project]
name        = "ps-plugin-module-delivery"
description = "Delivery module for ps-poetry: automated version stamping, dependency resolution, and topologically-ordered publishing"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]
keywords = ["poetry", "plugin", "delivery", "versioning", "publishing", "monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"
Issues     = "https://github.com/BlackGad/ps-poetry/issues"
Examples   = "https://github.com/BlackGad/ps-poetry-examples"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.delivery"

[tool.poetry.dependencies]
ps-plugin-sdk           = { path = "../../sdk", develop = true }
ps-token-expressions    = { path = "../../libraries/token_expressions", develop = true }
ps-dependency-injection = { path = "../../libraries/di", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/module/delivery", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"