[project]
name        = "ps-plugin-core"
description = ""
requires-python = ">=3.10,<3.14"
dynamic = ["version"]

[project.entry-points."poetry.application.plugin"]
entry = "ps.plugin.core.plugin:Plugin"

[tool.poetry.group.ps.dependencies]
ps-plugin-sdk = { path = "../sdk", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/core", from = "src" } ]

[tool.ps-plugin]
host-project = ".."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"