[project]
name        = "ps-plugin-core"
description = "Core Poetry application plugin: module discovery, dependency injection, and lifecycle management"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]
keywords = ["poetry", "plugin", "dependency-injection", "module-loader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"
Issues     = "https://github.com/BlackGad/ps-poetry/issues"
Examples   = "https://github.com/BlackGad/ps-poetry-examples"

[project.entry-points."poetry.application.plugin"]
entry = "ps.plugin.core._plugin:Plugin"

[tool.poetry.group.ps.dependencies]
ps-dependency-injection = { path = "../libraries/di", develop = true }
ps-plugin-sdk = { path = "../sdk", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/core", from = "src" } ]

[tool.ps-plugin]
host-project = ".."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"