[project]
name        = "ps-plugin-sdk"
description = ""
requires-python = ">=3.10,<3.14"
version = "0.0.0"
dependencies = [
    "poetry",
    "pydantic",
]

[tool.poetry.group.ps.dependencies]
ps-version = { path = "../libraries/version", develop = true }
ps-di      = { path = "../libraries/di", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/sdk", from = "src" } ]

[tool.ps-plugin]
host-project = ".."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"