[project]
name        = "ps-plugin-sdk"
description = "SDK for ps-poetry plugin modules: shared abstractions, models, protocols, and pyproject.toml utilities"
readme      = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]
dependencies = [
    "poetry",
    "pydantic",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"

[tool.poetry.group.ps.dependencies]
ps-version = { path = "../libraries/version", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/sdk", from = "src" } ]

[tool.ps-plugin]
host-project = ".."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"