[project]
name        = "ps-plugin-sdk"
description = "SDK for ps-poetry plugin modules: shared abstractions, models, protocols, and pyproject.toml utilities"
readme      = "README.md"
license     = {text = "MIT"}
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]
keywords = ["poetry", "plugin", "sdk", "pyproject", "toml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "poetry",
    "pydantic",
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"
Issues     = "https://github.com/BlackGad/ps-poetry/issues"
Examples   = "https://github.com/BlackGad/ps-poetry-examples"

[tool.poetry.group.ps.dependencies]
ps-version = { path = "../libraries/version", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/sdk", from = "src" } ]

[tool.ps-plugin]
host-project = ".."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"