[project]
name        = "ps-dependency-injection"
description = "Lightweight, thread-safe dependency injection container for Python"
readme      = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"

[tool.poetry]
packages = [ { include = "ps/di", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
