[project]
name        = "ps-version"
description = ""
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

[tool.poetry.dependencies]


[tool.poetry]
packages = [ { include = "ps/version", from = "src" } ]
version = "0.0.0"

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"