[project]
name        = "ps-version"
description = ""
requires-python = ">=3.10,<3.14"
dynamic = ["version"]

[tool.poetry]
packages = [ { include = "ps/version", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"