[project]
name        = "ps-version"
description = "Parse, compare, and format version numbers across PEP 440, SemVer, NuGet, CalVer, and loose formats"
readme      = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"

[tool.poetry]
packages = [ { include = "ps/version", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"