[project]
name        = "ps-plugin-module-check"
description = ""
requires-python = ">=3.10,<3.14"
dynamic = ["version"]

[tool.poetry.dependencies]
poetry = "^2.2.1"
toml = "^0.10.2"
pydantic = "^2.12.5"
ruff = "^0.14.10"
minimal = "^0.1.0"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.check"

[tool.poetry.group.ps.dependencies]
ps-plugin-sdk = { path = "../../sdk", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/module/check", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"