[project]
name        = "ps-plugin-module-check"
description = ""
requires-python = ">=3.10,<3.14"
version = "0.0.0"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.check"

[tool.poetry.group.ps.dependencies]
ps-plugin-sdk = { path = "../../sdk", develop = true }


[tool.poetry.dependencies]
ps-di = {path = "../../libraries/di", develop = true}

[tool.poetry]
packages = [ { include = "ps/plugin/module/check", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"