[project]
name        = "ps-plugin-module-delivery"
description = ""
requires-python = ">=3.10,<3.14"
dynamic = ["version"]

[tool.poetry.dependencies]
poetry = "*"
toml = "^0.10.2"
pydantic = "^2.12.5"
ruff = "^0.14.10"
minimal = "^0.1.0"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.delivery"

[tool.poetry.group.ps.dependencies]
ps-plugin-sdk = { path = "../../sdk", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/module/delivery", from = "src" } ]
version = "0.0.0"

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"