[project]
name        = "ps-plugin-module-delivery"
description = ""
requires-python = ">=3.10,<3.14"
version = "0.0.0"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.delivery"

[tool.poetry.group.ps.dependencies]
ps-version              = { path = "../../libraries/version", develop = true }
ps-token-expressions    = { path = "../../libraries/token_expressions", develop = true }
ps-plugin-sdk           = { path = "../../sdk", develop = true }

[tool.poetry]
packages = [ { include = "ps/plugin/module/delivery", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"