[project]
name        = "ps-plugin-module-delivery"
description = "Delivery module for ps-poetry: automated version stamping, dependency resolution, and topologically-ordered publishing"
readme      = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.0.0"
authors = [
    { name = "ztBlackGad" },
]

[project.urls]
Homepage   = "https://github.com/BlackGad/ps-poetry"
Repository = "https://github.com/BlackGad/ps-poetry"

[project.entry-points."ps.module"]
module_entry = "ps.plugin.module.delivery"

[tool.poetry.group.ps.dependencies]
ps-version              = { path = "../../libraries/version", develop = true }
ps-token-expressions    = { path = "../../libraries/token_expressions", develop = true }
ps-plugin-sdk           = { path = "../../sdk", develop = true }


[tool.poetry.dependencies]
ps-dependency-injection = {path = "../../libraries/di", develop = true}

[tool.poetry]
packages = [ { include = "ps/plugin/module/delivery", from = "src" } ]

[tool.ps-plugin]
host-project = "../.."

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"