[project]
name        = "ps-plugin-module-monorepo"
description = ""
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

[tool.poetry.dependencies]
poetry = "^2.2.1"
toml = "^0.10.2"
pydantic = "^2.12.5"

[project.entry-points."ps.module"]
entry = "ps.plugin.module.monorepo.entry:Entry"

[tool.poetry]
packages = [ { include = "ps/plugin/module/monorepo", from = "src" } ]
version = "0.0.0"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"